# playground

./: .gitignore  README.md
c++/asm/: asmExample.cpp  asmExample3.s
c++/boost/: signals.cpp  uuid.cpp
c++/c++11/: test_algorithm.cpp  test_cast.cpp  test_idioms.cpp  test_intToString.cpp  test_lambda.cpp  test_ringBuffer.cpp  test_throw.cpp  test_vector.cpp
c++/c++11/test_call_lib/test_static_lib/: CMakeLists.txt  File1.cpp
c++/c++17/: test_byte.cpp  test_string_view.cpp
c++/ifdef/: main.cpp
c++/operatingSystem/: openpipetest.cpp
c++/optimization/: loopTiling.cpp
c++/preprocessor/: test.cpp
c++_language/asm/: asmExample.s  asmExample2.s  asmExample3.cpp  asmTutorial.cpp
c++_language/boost/: ptree.cpp  regex.cpp
c++_language/c++11/: test_CRTP.cpp  test_const.cpp  test_custom_iterator.cpp  test_forward_declaration.cpp  test_hashTable.cpp  test_impliciteConversion.cpp  test_inline.cpp  test_iterator.cpp  test_keywords.cpp  test_noexcept.cpp  test_qtConcurrent.cpp  test_sizeof_stoptime.cpp
c++_language/c++17/: test_constexpr.cpp  test_template.cpp
c++_language/libraries/fixedPoint/fpmath/test/SimpleTest/: CMakeLists.txt  SimpleTest.hpp
c++_language/operatingSystem/: forktest.cpp
c++_language/optimization/: binary_look_up_table.cpp  testBitsTricks.cpp
c++_language/sysinfo/: sysinfoTest.cpp
csharp/: hello.cs
distributed_system/: distributed_system.md
interview/array/: all_subarray_with_0_sum.cc  arrays_left_rotation.cc  dutch_national_flag.cc  equilibrium_point.cpp  find_median_of_stream.cc  find_the_missing_number.cc  largest_subarray_with_equal_0_1.cc  largest_sum_contiguous_subarray.cc  longest_increasing_subsequence.cc  merge_k_sorted_arrays.cc  nb_occurences_of_2.cc  next_greater_element.cc  peak_element.cc  remove_duplicates_from_sorted_array.cc  segregate_0_1.cc  sliding_sum.cc  smallest_largest_elements_unsorted_array.cc
interview/backtracking/: a_rat_in_maze.cc  hamiltonian_cycle.cc  knight_problem.cc  n_queen_problem.cc  sudoku.cc
interview/basic/: basic_loop.cc
interview/boost/: iostreams.cpp  system.cpp  thread.cpp
interview/boost/python/: CMakeLists.txt
interview/count/: apples_oranges.cc  sum_of_two_values.cc
interview/crawler/: crawler.py
interview/dp/: coin_change.cc  fib.cc  ugly_numbers.cc
interview/equalize/: equal_stack.cc
interview/graph/: graphTest.cpp
interview/greedy/: activity_selection_problem.cc  job_scheduling_with2jobs_allowed.cc  merge_overlapping_intervals.cc  minimum_number_of_platforms_required.cc
interview/histo/: trapping_the_water.cc
interview/list/: clone_linkedlist_with_next_and_random_pointer.cc  detect_cycle_list.cc  merge_list.cpp
interview/lower_bound/: lower_bound.cc
interview/matrix/: find_duplicate_binary_row.cc
interview/nitpicking_games/: angry_professor.cc  append_delete.cc  cut_the_stick.cc  extra_long_facotorial.cc  find_median.cc  partition_problem.cc  permuting_two_arrays.cc  utopian_tree.cc
interview/palindrome/: find_odd_palindrome.cpp  find_palindrome.cpp
interview/patternDesign/: prototype.cpp
interview/recursion/: boogle.cc  make_all_combinaisons_of_size_k.cc  remove_invalid_parentheses.cc  work_break_problem.cc
interview/search/: binary_search.cc  interpolation_search.cc  search_an_elem_in_sorted_and_rotated_array.cc
interview/sort/: bubble_sort.cc  counting_sort.cc  heap_sort.cc  move_zero_to_the_left.cc  quick_sort.cc
interview/stack/: reverse_stack.cc
interview/string/: check_if_a_given_string_is_a_valid_number.cc  common_child.cc  find_sub_string_inside_big.cc  find_sub_string_inside_big_with_trie_tree.cc  is_anagram.cc  is_isogram.cc  is_pangram.cc  longest_common_subsequence.cc  longest_substring_without_repeating_char.cc  reduced_string.cc  remove_char_to_create_anagram.cc  string_are_rotation_of_each_other.cc  string_find_its_first_non_repeating_character.cc
interview/sysinfo/: stackoverflow.cpp
interview/time/: time_to_word.cc
interview/tree/: BST.cpp  test_tree.cpp  trie_tree.cpp  word_break_problem_trie.cc
java/: MyFirstJavaProgram.java
libraries/fmt/: CMakeLists.txt  main.cpp
optimization/: look_up_table.cpp  n_place_cache.cpp  storage.cpp  tips_and_tricks.cpp
optimization/parallelism/cuda/cuda_stream_test/libCudaTest/: CMakeLists.txt  GpuStreamClass.cpp
parallelism/MultiThreading/QThread/: CMakeLists.txt  MyThread.cpp  MyThread.hpp  main.cpp
parallelism/cuda/cuda_stream_test/: CMakeLists.txt  main.cpp
parallelism/cuda/cuda_stream_test/libCudaTest/: GpuInformation.cpp  GpuStreamClass.hpp
parallelism/cuda/cude_test_lib/libCudaTest/: CMakeLists.txt  GpuTestClass.cpp
parallelism/cuda/cude_test_lib/libCudaTest/kernel/: kernel_gpu.h
parallelism/cuda/simpleTest/: CMakeLists.txt  test1.cu
projecteuler/: 1.cpp  2.cpp  3.cpp  flood_fill.cpp
tests/c++11/test_call_lib/test_shared_lib/: CMakeLists.txt  File1.hpp  File2.hpp
(+271 files in other folders)
